# angelica

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Plan.md  README.md  config.toml
.cargo/: config.toml
.lspi/: config.toml
angelica-gui/: .gitignore
angelica-gui/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
angelica-gui/frontend/src/: App.svelte  app.css
angelica-gui/frontend/src/components/: ApprovalPanel.svelte  InputBar.svelte  MessageBubble.svelte  MessageList.svelte  SettingsPanel.svelte  SlashMenu.svelte  StatusBar.svelte  StreamingBubble.svelte  ToolCard.svelte  UsageStats.svelte
angelica-gui/frontend/src/lib/: api-generated.ts  api.ts  commands.svelte.ts  diff.ts  markdown.ts  store.svelte.ts  types.ts
angelica-gui/src-tauri/: Cargo.toml  tauri.conf.json
angelica-gui/src-tauri/src/: lib.rs  main.rs
angelica-tui/: Cargo.toml
angelica-tui/src/: app.rs  diff.rs  draw.rs  event.rs  lib.rs  main.rs  state.rs  theme.rs  types.rs
angelica-tui/src/mode/: approval.rs  chat.rs  mod.rs  settings.rs  slash.rs
angelica-tui/src/render/: cards.rs  components.rs  mod.rs  text.rs
src/: config.rs  data_git.rs  embedding.rs  episode.rs  fatigue.rs  lib.rs  main.rs  memory.rs  permission.rs  session.rs  usage.rs
src/agent/: dispatch.rs  events.rs  execution.rs  group.rs  history.rs  mod.rs  recall.rs  run.rs  step.rs  tooling.rs  transition.rs  turn.rs
src/agent/modes/: awake.rs  mod.rs  sleeping.rs
src/debug/: mod.rs  server.rs  snapshot.rs
src/llm/: mod.rs  patch.rs  types.rs
src/mcp/: client.rs  mod.rs  transport.rs
src/prompt/: mod.rs
src/skills/: frontmatter.rs  mod.rs
src/sleep/: consolidation.rs  mod.rs  tools.rs
src/state/: mod.rs
src/tools/: edit_file.rs  list_dir.rs  mod.rs  notebook.rs  query_sessions.rs  read_file.rs  recall.rs  run_command.rs  skill.rs  update_agent_memory.rs  update_soul.rs  update_user_profile.rs  write_file.rs
src/tui/: app.rs  constants.rs  diff.rs  draw.rs  event.rs  input.rs  mod.rs  mouse.rs  render.rs  scroll.rs  state.rs  theme.rs  types.rs  ui.rs
src/tui/mode/: approval.rs  chat.rs  mod.rs  session.rs  slash.rs
src/tui/render/: cards.rs  components.rs  mod.rs
tests/: mock_mcp_server.py
xtask/src/: main.rs
