[package]
name = "angelica"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Debug HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Multi-provider LLM client
genai = "0.6.0-beta.20"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# TOML config
toml = "1.1.2"

# TUI
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

# Regex
regex = "1"

# Chrono for timestamps
chrono = "0.4"

# CLI args
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait
async-trait = "0.1"

# anyhow for error handling
anyhow = "1"
thiserror = "2"
unicode-width = "0.2.2"

# Diff generation
similar = "2"
uuid = { version = "1.23.1", features = ["v4"] }
rand = "0.9"
reqwest = { version = "0.13.3", features = ["json"] }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"

[workspace]
resolver = "2"
members = [
    ".",                       # angelica (TUI binary + lib)
    "angelica-gui/src-tauri",  # Tauri GUI binary
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
angelica = { path = "." }
dirs = "6.0.0"
