[package]
name = "angelica-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "angelica"
path = "src/main.rs"

[dependencies]
angelica = { path = ".." }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
